# RFactorChampionshipCreator

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CLAUDE.md  DEVELOPER_GUIDE.md  F1-1976LE.cch  INSTALL.md  NEXT_STEPS.md  PACKAGING_README.md  QUICK_START.md  REACT_MIGRATION_COMPLETE.md  README.md  RUN_APP.bat  SCRIPTS_GUIDE.md  SPRINT5_ISSUES.md  START_HERE.md  USER_GUIDE.md  build_executable.bat  build_frontend.bat  config.json  config.template.json  create_distribution.bat  create_tc2025.py  demo_sprint1.py  demo_sprint2.py  demo_sprint3.py  demo_sprint4.py  demo_with_config.py  fix_and_test.py  fix_and_test_v2.py  kill_ports.bat  pyproject.toml  quick_build.bat  requirements.txt  rfactor_app.spec  setup_config.py  start.bat  talents_export_all.csv  talents_export_specific.csv  talents_template.csv  (+2 more)
.claude/: settings.local.json
RFactorFiles/: Config.ini  ReadMe.chm  ReadMe.txt  installscript-directx.vdf
demos/: demo_create_championship.py
docs/: FILE_FORMATS.md  QUICK_START.md  README.md  SPECIFICATIONS.md  USER_GUIDE.md  archive && mv CUsersvallloicPycharmProjectsRFactorChampionshipCreatorNEXT_STEPS.md CUsersvallloicPycharmProjectsRFactorChampionshipCreatordocsarchive  archive && mv CUsersvallloicPycharmProjectsRFactorChampionshipCreatorSPRINT4_SUMMARY.md CUsersvallloicPycharmProjectsRFactorChampionshipCreatordocsarchive  archive && mv CUsersvallloicPycharmProjectsRFactorChampionshipCreatorSPRINT5_ISSUES.md CUsersvallloicPycharmProjectsRFactorChampionshipCreatordocsarchive  (+1 more)
frontend/: .env.example  MIGRATION_SUMMARY.md  README.md  index.html  (+3 more)
(+1677 files in other folders)
