[project]
name = "rfactorchampionshipcreator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chardet==5.2.0",
    "fastapi==0.104.1",
    "jinja2==3.1.2",
    "pydantic==2.5.0",
    "pyinstaller>=6.17.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
]
